Fix double border issue at the end of the options list

--- a/src/styles/components/_option.scss
+++ b/src/styles/components/_option.scss
@@ -4,6 +4,9 @@
   justify-content: space-between;
   padding: $l-size $m-size;
 }
+.option:last-child {
+  border-bottom: none;
+}
 
 .option__text {
  color: white;
