--- a/src/styles/components/_widget.scss
+++ b/src/styles/components/_widget.scss
@@ -23,6 +23,7 @@
 }
 .widget-options__list {
   padding-left: 0;
+  margin: 0;
 }
 .widget-options__message {
   color: $off-white;
